// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderImage renders 0 1`] = `
Array [
  .c0 {
  border-image: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImage renders function 1`] = `
Array [
  .c0 {
  border-image: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImage renders invalid theme path 1`] = `
Array [
  .c0 {
  border-image: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImage renders negative number 1`] = `
Array [
  .c0 {
  border-image: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImage renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-image: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-image: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-image: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-image: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImage renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-image: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-image: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImage renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-image: July;
}

@media May {
  .c0 {
    border-image: August;
  }
}

@media April {
  .c0 {
    border-image: September;
  }
}

@media January {
  .c0 {
    border-image: November;
  }
}

@media April {
  .c0 {
    border-image: August;
  }
}

@media June {
  .c0 {
    border-image: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-image: July;
}

@media May {
  .c0 {
    border-image: August;
  }
}

@media April {
  .c0 {
    border-image: September;
  }
}

@media January {
  .c0 {
    border-image: November;
  }
}

@media April {
  .c0 {
    border-image: August;
  }
}

@media June {
  .c0 {
    border-image: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-image: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image: November;
  }
}

@media April {
  .c0 {
    border-image: January;
  }
}

@media January {
  .c0 {
    border-image: December;
  }
}

@media April {
  .c0 {
    border-image: April;
  }
}

@media June {
  .c0 {
    border-image: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-image: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image: November;
  }
}

@media April {
  .c0 {
    border-image: January;
  }
}

@media January {
  .c0 {
    border-image: December;
  }
}

@media April {
  .c0 {
    border-image: April;
  }
}

@media June {
  .c0 {
    border-image: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImage renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-image: July;
  }
}

@media April {
  .c0 {
    border-image: August;
  }
}

@media January {
  .c0 {
    border-image: September;
  }
}

@media April {
  .c0 {
    border-image: November;
  }
}

@media June {
  .c0 {
    border-image: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-image: July;
  }
}

@media April {
  .c0 {
    border-image: August;
  }
}

@media January {
  .c0 {
    border-image: September;
  }
}

@media April {
  .c0 {
    border-image: November;
  }
}

@media June {
  .c0 {
    border-image: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image: January;
  }
}

@media April {
  .c0 {
    border-image: December;
  }
}

@media January {
  .c0 {
    border-image: April;
  }
}

@media April {
  .c0 {
    border-image: May;
  }
}

@media June {
  .c0 {
    border-image: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image: January;
  }
}

@media April {
  .c0 {
    border-image: December;
  }
}

@media January {
  .c0 {
    border-image: April;
  }
}

@media April {
  .c0 {
    border-image: May;
  }
}

@media June {
  .c0 {
    border-image: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImage renders postitive number 1`] = `
Array [
  .c0 {
  border-image: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImage renders string 1`] = `
Array [
  .c0 {
  border-image: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImage renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderImage renders valid theme path 1`] = `
Array [
  .c0 {
  border-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
